---
source: tests/test_java.rs
info:
  program: log2src
  args:
    - "-d"
    - tests/java/BasicSlf4j.java
    - "-l"
    - tests/resources/java/basic-slf4j.log
    - "-f"
    - "^(?<timestamp>\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}) (?<thread>\\d+) (?<body>.*)$"
  env:
    APPDATA: /var/folders/hq/4yhdz_bx6ygfyxl54gnpygc80000gn/T/.tmpF9O5Dv
    COLS: "1000"
    HOME: /var/folders/hq/4yhdz_bx6ygfyxl54gnpygc80000gn/T/.tmpF9O5Dv
    LOCALAPPDATA: /var/folders/hq/4yhdz_bx6ygfyxl54gnpygc80000gn/T/.tmpF9O5Dv
    USERPROFILE: /var/folders/hq/4yhdz_bx6ygfyxl54gnpygc80000gn/T/.tmpF9O5Dv
    XDG_CONFIG_HOME: /var/folders/hq/4yhdz_bx6ygfyxl54gnpygc80000gn/T/.tmpF9O5Dv
---
success: true
exit_code: 0
----- stdout -----
{"logRef":{"details":{"thread":"123"}},"srcRef":{"sourcePath":"{java_dir}/BasicSlf4j.java","language":"Java","lineNumber":10,"endLineNumber":10,"column":20,"name":"main","text":"\"Application starting\"","quality":19,"pattern":"(?s)^Application starting$","args":[],"vars":[]},"variables":[]}
{"logRef":{"details":{"thread":"123"}},"srcRef":{"sourcePath":"{java_dir}/BasicSlf4j.java","language":"Java","lineNumber":12,"endLineNumber":13,"column":21,"name":"main","text":"\"Debug message: args length = {}\"","quality":24,"pattern":"(?s)^Debug message: args length = (.+)$","args":["Placeholder"],"vars":["args.length"]},"variables":[{"expr":"args.length","value":"0"}]}

----- stderr -----
  ⚠ failed to read cache file "cache.XXX"
  ╰─▶ Hit the end of buffer, expected more data
